--- a/src/main/java/app/netlify/spkisp_ramdani/panels/PanelProvider.form
+++ b/src/main/java/app/netlify/spkisp_ramdani/panels/PanelProvider.form
@@ -89,12 +89,10 @@
                 <Component class="javax.swing.JTable" name="tbl">
                   <Properties>
                     <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                      <Table columnCount="5" rowCount="4">
+                      <Table columnCount="3" rowCount="4">
                         <Column editable="true" title="" type="java.lang.Object"/>
                         <Column editable="true" title="ID" type="java.lang.Object"/>
-                        <Column editable="true" title="Nama Kriteria" type="java.lang.Object"/>
-                        <Column editable="true" title="Sifat" type="java.lang.Object"/>
-                        <Column editable="true" title="Satuan" type="java.lang.Object"/>
+                        <Column editable="true" title="Nama Provider" type="java.lang.Object"/>
                       </Table>
                     </Property>
                     <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
@@ -105,16 +103,6 @@
                           <Renderer/>
                         </Column>
                         <Column maxWidth="40" minWidth="-1" prefWidth="-1" resizable="true">
-                          <Title/>
-                          <Editor/>
-                          <Renderer/>
-                        </Column>
-                        <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
-                          <Title/>
-                          <Editor/>
-                          <Renderer/>
-                        </Column>
-                        <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
                           <Title/>
                           <Editor/>
                           <Renderer/>
@@ -232,9 +220,6 @@
                     <Property name="text" type="java.lang.String" value="^"/>
                     <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
                       <Dimension value="[11, 22]"/>
-                    </Property>
-                    <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                      <Dimension value="[22, 22]"/>
                     </Property>
                   </Properties>
                   <Events>
