--- a/src/main/java/app/netlify/spkisp_ramdani/panels/PanelBobot.form
+++ b/src/main/java/app/netlify/spkisp_ramdani/panels/PanelBobot.form
@@ -150,7 +150,7 @@
                               <Group type="102" alignment="1" attributes="0">
                                   <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
                                   <EmptySpace max="-2" attributes="0"/>
-                                  <Component id="jComboBox1" min="-2" pref="97" max="-2" attributes="0"/>
+                                  <Component id="comboPrasetel" min="-2" pref="97" max="-2" attributes="0"/>
                               </Group>
                               <Group type="102" alignment="1" attributes="0">
                                   <Component id="lUrut" min="-2" max="-2" attributes="0"/>
@@ -188,7 +188,7 @@
                       <Group type="102" alignment="1" attributes="0">
                           <EmptySpace pref="8" max="32767" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
-                              <Component id="jComboBox1" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="comboPrasetel" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="jLabel2" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="bHapusPrasetel" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="bUbahPrasetel" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -274,7 +274,7 @@
                     <Property name="text" type="java.lang.String" value="Cari"/>
                   </Properties>
                 </Component>
-                <Component class="javax.swing.JComboBox" name="jComboBox1">
+                <Component class="javax.swing.JComboBox" name="comboPrasetel">
                   <Properties>
                     <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
                       <StringArray count="2">
@@ -284,7 +284,7 @@
                     </Property>
                   </Properties>
                   <Events>
-                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jComboBox1ActionPerformed"/>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="comboPrasetelActionPerformed"/>
                   </Events>
                   <AuxValues>
                     <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
@@ -302,6 +302,9 @@
                     </Property>
                     <Property name="text" type="java.lang.String" value="Hapus Prasetel"/>
                   </Properties>
+                  <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="bHapusPrasetelActionPerformed"/>
+                  </Events>
                 </Component>
                 <Component class="javax.swing.JButton" name="bUbahPrasetel">
                   <Properties>
@@ -310,6 +313,9 @@
                     </Property>
                     <Property name="text" type="java.lang.String" value="Ubah Nama Prasetel"/>
                   </Properties>
+                  <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="bUbahPrasetelActionPerformed"/>
+                  </Events>
                 </Component>
               </SubComponents>
             </Container>
